[package]
name = "actix-session-example"
version = "0.1.0"
authors = ["dbetteridge <danielrbetteridge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-rt = "1.0"
actix = "0.10.0"
config = "0.10.1"
deadpool-postgres = "0.5.0"
derive_more = "0.99.2"
dotenv = "0.15.0"
serde = { version = "1.0.104", features = ["derive"] }
tokio-pg-mapper = "0.1"
tokio-pg-mapper-derive = "0.1"
tokio-postgres = { version="0.5.1", features=["with-chrono-0_4"] }
bcrypt = "0.8"
actix-session = "0.4.0"
chrono = { version = "0.4", features = ["serde"] }
actix-cors = "0.5"